--- a/source/_data/links.yml
+++ b/source/_data/links.yml
@@ -25,7 +25,7 @@ my_friends:
       description: "看一只自稱貓娘的日常"
       screenshot: /static/friends/moeri.webp
     - title: "Lenger 的后花园"
-      url: https://spookerv5.github.io/
+      url: https://varraro.github.io/
       avatar: https://wsrv.nl/?url=https://raw.githubusercontent.com/SpookerV5/gitdemo/main/waifu.png&w=200&h=200&output=webp
       description: "如果是你的话，一定没问题"
       screenshot: /static/friends/lenger.webp
@@ -159,17 +159,17 @@ my_friends:
       avatar: https://wsrv.nl/?url=https://gravatar.loli.net/avatar/5df946d48b36e6f8061cdfe7ebcdf75c&w=200&h=200&output=webp #似乎链接不固定
       description: "Anillc dayo~"
       screenshot: /static/friends/anillc.webp
+    - title: "Jackie 的猫窝"
+      url: https://jackiecat.top/
+      avatar: https://wsrv.nl/?url=https://s2.loli.net/2022/05/04/iQsm9Bofv83yY1U.jpg&w=200&h=200&output=webp
+      description: "一只猫猫的猫窝"
+      screenshot: /static/friends/jackie.webp
     - title: "Souiken’s Homepage"
       url: https://souiken.moe/
       avatar: https://wsrv.nl/?url=https://souiken.moe/img/avatar.webp&w=200&h=200&output=webp
       description: "愿我们度过这个漫漫长夜之后，依旧能看到那旭日东升。"
       screenshot: /static/friends/Souiken.webp
 unupdate:
-    - title: "Jackie 的猫窝"
-      url: https://jackiecat.top/
-      avatar: https://106.55.183.72/lsky/1/avatar.jpg
-      description: "一只猫猫的猫窝"
-      screenshot: /static/friends/jackie.webp
     - title: "梦墨's Blog"
       url: https://dreamo.ink/
       avatar: https://wsrv.nl/?url=https://dreamo.ink/images/avatar.png&w=200&h=200&output=webp
