--- a/_config.stellaris.yml
+++ b/_config.stellaris.yml
@@ -15,7 +15,7 @@ sidebar:
     post: '[最新](/)'
     archive: '[文章](/archives)'
     links: '[友链](/links)'
-    homepage: '[Homepage](https://nekoq.top)'
+    fluffyluo: '[fluffyluo](/fluffyluo)'
     #about: # '[关于](/about/)'
 
   widgets:
